Hello, Rails! is now displayed at localhost:3000

--- a/config/database.yml
+++ b/config/database.yml
@@ -7,5 +7,5 @@ development:
   <<: *default
   database: uss_rss_reader_development
   username: postgres
-  password: password
+  password: PASSWORD
   port: 5433
