Added @items and a FeedItem class to the model Feed. Will now save all the items and puts them to the terminal.

--- a/test/fixtures/feeds.yml
+++ b/test/fixtures/feeds.yml
@@ -4,8 +4,10 @@ one:
   title: MyString
   url: MyString
   description: MyString
+  items: MyText
 
 two:
   title: MyString
   url: MyString
   description: MyString
+  items: MyText
