The gemfile and database.yml were modified to work on windows. Beyond this, the first tests were made. Four were made. The Feed and Article models were modified so that at least two of the tests now pass.

--- a/config/database.yml
+++ b/config/database.yml
@@ -2,10 +2,15 @@ default: &default
   adapter: postgresql
   pool: 5
   timeout: 5000
+  username: postgres
+  password: password
+  port: 5433
+  host: localhost
 
 development:
   <<: *default
   database: uss_rss_reader_development
-  username: postgres
-  password: PASSWORD
-  port: 5432
+
+test:
+  <<: *default
+  database: uss_rss_reader_test
