--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,6 +7,8 @@ AllCops:
     - 'Gemfile.lock'
     - 'scratch/*'
     - 'config/initializers/*'
+    - 'spec/rails_helper.rb'
+    - 'spec/spec_helper.rb'
   TargetRubyVersion: 2.3
 
 Rails:
