--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ rvm:
  - 2.2
  - jruby
  - rbx-2
-services
+services:
   - postgresql
 # uncomment and edit the following line if your project needs to run something other than `rake`:
 script: bundle exec rspec spec
