--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,7 @@ rvm:
  - 2.2
  - jruby
  - rbx-2
-services:
-  - postgresql
+services: postgresql
 # uncomment and edit the following line if your project needs to run something other than `rake`:
 script: bundle exec rspec spec
 
