--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,3 @@
-before_script:
-  - psql -c 'create database travis_ci_test;' -U postgres
-
 language: ruby
 rvm:
  - 2.2
@@ -10,6 +7,12 @@ services: postgresql
 # uncomment and edit the following line if your project needs to run something other than `rake`:
 script: bundle exec rspec spec
 
+before_script:
+  - cp config/database.yml.travis config/database.yml
+
 test:
   adapter: postgresql
   database: travis_ci_test
+
+addons:
+  postgresql: "9.6"
