--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,15 @@
 language: ruby
+
 rvm:
  - 2.3.1
+ 
 services: postgresql
-# uncomment and edit the following line if your project needs to run something other than `rake`:
-script: bundle exec rspec spec
 
 before_script:
-  - cp config/database.yml.travis config/database.yml
+ - bundle exec rake db:setup
+ - bundle exec rake db:migrate
+
+script: bundle exec rspec spec
 
 test:
   adapter: postgresql
