--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ rvm:
 services: postgresql
 
 before_script:
+ - psql -c 'create database travis_ci_test;' -U postgres
+ - cp config/database.travis.yml config/database.yml
  - bundle exec rake db:setup
  - bundle exec rake db:migrate
 
