--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ language: ruby
 rvm:
  - 2.3.1
  
-services: postgresql
+services:
+ - postgresql
 
 before_script:
  - psql -c 'create database travis_ci_test;' -U postgres
@@ -11,11 +12,8 @@ before_script:
  - bundle exec rake db:setup
  - bundle exec rake db:migrate
 
-script: bundle exec rspec spec
-
-test:
-  adapter: postgresql
-  database: travis_ci_test
+script:
+ - bundle exec rspec spec
 
 addons:
   postgresql: "9.6"
