--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ services:
 before_script:
  - psql -c 'create database travis_ci_test;' -U postgres
  - cp config/database.travis.yml config/database.yml
- 
+ - bundle exec rake db:setup
+
 script:
  - bundle exec rspec spec
